# cpp-examples-ml

./: CMakeLists.txt  README.md
dt_example1/: decisiontree.cpp
dt_example2/: decisiontree.cpp
ga_ex/: ga.h  ga_interface.cpp
handwritten_ex/: decisiontree.cpp  neuralnetwork.cpp  semeion.test  semeion.train
opticaldigits_ex/: boosttree.cpp  decisiontree.cpp  extremerandomforest.cpp  knn.cpp  knn_weighted.cpp  neuralnetwork.cpp  normalbayes.cpp  randomforest.cpp  svm.cpp
other_ex/: normalbayes.cpp
speech_ex/: decisiontree.cpp  svm.cpp
tools/: dt_varimportance.cc  ex_tree.xml  randomize.cc  selectlines.cc  tree.yml  typechecker.cc
